Prevent images from overflowing in list items

--- a/src/styles/layout.sass
+++ b/src/styles/layout.sass
@@ -5,9 +5,15 @@
   flex-direction: column
   flex-grow: 1
 
-.children *
+.children
+  display: flex
+  flex-direction: column
+  flex-grow: 1
   max-width: 100%
   width: Min(65ch, 95vw)
+
+.children img
+  width: 100%
 
 body
   margin-top: var(--nav-height)
